# due-diligence-transnacional

./: .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  PLAN.md  README.md  README.pt-br.md  SECURITY.md  plugin.json  pyproject.toml
.claude/: settings.json
.claude/commands/: consultar-base.md  expand-name.md  expandir-nome.md  generate-dossier.md  gerar-dossie.md  investigar.md  investigate.md  search-database.md
cases/kelcy-warren/: target.yaml
commands/: consultar-base.md  expandir-nome.md  investigar.md
docs/: data-sources.md  ethics.md  legal-context.md  limitations.md  methodology.md  security-model.md  setup.md
examples/: target-template.yaml
examples/case-brazil-fictional/: findings.json  target.yaml
examples/case-fictional/: findings.json  identity-variations.json  target.yaml
examples/case-fictional/findings/: de_corps.json  fara.json  fec.json  fl_sunbiz.json  lda.json  news_br.json  news_us.json  (+2 more)
examples/case-magro-redacted/: findings.json  target.yaml
examples/case-vargas-fictional/: findings.json  target.yaml
schemas/: confidence-levels.schema.json  findings-consolidated.schema.json  findings.schema.json  identity-variations.schema.json  target.schema.json
scripts/: run_pipeline.py  start_fec_mcp.py
skills/due-diligence-transnacional/: SKILL.md
skills/expand-brazilian-identity/: SKILL.md
skills/generate-dossier-pdf/: SKILL.md
skills/search-fec/: SKILL.md
skills/search-lobby-fara/: SKILL.md
skills/search-news-archive/: SKILL.md
skills/search-opencorporates/: SKILL.md
skills/search-state-corps/: SKILL.md
skills/triangulate-findings/: SKILL.md
tests/: test_identity_expansion.py  test_lobby_fara.py  test_security.py  test_triangulation.py
tests/fixtures/: sample_fec_response.json
(+30 files in other folders)
