[project]
name = "due-diligence-transnacional"
version = "0.1.0"
description = "Pipeline CLI para due diligence de brasileiros em bases públicas americanas"
authors = [
    { name = "Reinaldo Chaves", email = "reichaves@gmail.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
keywords = ["journalism", "due-diligence", "fec", "brazil", "investigative"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Other Audience",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "requests>=2.31",
    "jsonschema>=4.22",
    "pyyaml>=6.0",
    "reportlab>=4.1",
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "black>=24.0",
    "mypy>=1.10",
    "types-requests>=2.31",
    "types-pyyaml>=6.0",
]

[project.scripts]
ddt = "scripts.run_pipeline:main"

[project.urls]
Homepage = "https://github.com/reichaves/due-diligence-transnacional"
Repository = "https://github.com/reichaves/due-diligence-transnacional"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
